[package]
name = "llob_install"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.8.0"
log = "0.4.21"
path-clean = "1.0.1"
regex = "1.10.4"
reqwest = "0.12.2"
serde_json = "1.0.115"
sysinfo = "0.30.7"
time = { version = "0.3.34", features = ["formatting", "macros","local-offset"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter","time","local-time"]}
winapi = "0.3.9"
zip = "0.6.6"


[build-dependencies]
winres = "0.1.12"


[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
